@@ -1,3 +1,10 @@
+2011-01-25  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/47265
+	PR tree-optimization/47443
+	* gcc.c-torture/compile/pr47265.c: New test.
+	* gcc.dg/pr47443.c: New test.
+
 2011-01-25  Martin Jambor  <mjambor@suse.cz>
 
 	PR tree-optimization/47382
